# scorpio_base

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: build_and_test.yml
include/scorpio_base/: cereal_port.hpp  cmd_vel_to_ackermann.hpp  kalman_filter.hpp  scorpio_base_node.hpp
launch/: scorpio_base_launch.py
params/: base_param.yaml
src/: cereal_port.cpp  cmd_vel_to_ackermann.cpp  scorpio_base_node.cpp  scorpio_base_parameters.yaml
