<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scorpio_base</name>
  <version>1.0.0</version>
  <description>Scorpio robot base hardware driver for ROS2</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>
  <author email="litian.zhuang@nxrobo.com">Litian Zhuang</author>
  <author email="lihanchen2004@163.com">Lihan Chen</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <!-- Disabled clang-tidy for generated code: scorpio_base_parameters.hpp -->
  <!-- https://github.com/PickNikRobotics/generate_parameter_library/issues/302 -->
  <!-- <test_depend>ament_cmake_clang_tidy</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
